docs(backlog): close CI-JACOCO-JDK27-1, file WorkflowConfigLoadTest-1
The fix widened past the row's own asn-core-only framing once driving
the build past it showed the same jacoco/JDK27 failure recurs in every
module of both reactors. File the crash it uncovered (inspecto-ops's
WorkflowConfigLoadTest fork fails to start on JDK 27) as a fresh P1
rather than investigating further this session -- surefire 3.2.5 vs
the 3.5.3 proven to work elsewhere is the strongest untested lead.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>